Prevent table content squishing on different screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ th, td {
     border: 1px solid #444;
     padding: 8px;
     text-align: center;
+    white-space: nowrap;
 }
 
 @media (width: 744px) {
